FECHA CALCULO BASE PARA REALIZAR EL CALCULO

--- a/Reserva_Vehiculos/Views/User/Login.cshtml
+++ b/Reserva_Vehiculos/Views/User/Login.cshtml
@@ -29,7 +29,7 @@
 
       <!-- PASSWORD INPUT -->
       <label for="contrasenia">Contraseña</label>
-      <input name="contrasenia" type="password" placeholder="Enter Password">
+      <input asp-for="contrasenia" type="password" placeholder="Enter Password">
 
 
       <button type="submit">Login</button>
