Se calcula la diferencia entre dos fechas

--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -27,7 +27,7 @@
             <legend>Información Final</legend>
 
             <label for="fecha">Fecha:</label>
-            <input asp-for="fecha_fin" type="date" id="fecha" name="fecha">
+            <input asp-for="fecha1" type="date" id="fecha" name="fecha1">
 
             <label for="hora">Hora:</label>
             <input type="time" id="hora" name="hora" >
