--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -20,8 +20,12 @@
 
             <label for="hora">Hora:</label>
             <input type="time" id="hora" name="hora">
-
         </fieldset>
+
+        <div style="text-align: right;"> <!-- Contenedor para alinear a la derecha -->
+            <a asp-action="categoria_view" asp-controller="Categoria" class="btn btn-primary">Continuar</a>
+        </div>
+
 
         <fieldset>
             <legend>Información Final</legend>
@@ -30,13 +34,40 @@
             <input asp-for="fecha1" type="date" id="fecha" name="fecha1">
 
             <label for="hora">Hora:</label>
-            <input type="time" id="hora" name="hora" >
-
-
+            <input type="time" id="hora" name="hora">
         </fieldset>
-
-    <button type="submit">Guardar</button>
     </form>
+
+    <br>
+
+    <div style="text-align: center;"> 
+        <h1>
+            Conoce nuestra flota
+        </h1>
+        <h3>Las mejores opciones para que reserves y aproveches</h3>
+    </div>
+
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="..." class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </body>
 
 </html>
