--- a/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
+++ b/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
@@ -1,4 +1,5 @@
-@model List<Categoria>
+@model Obj_ViewModel
+
 @{
     ViewData["Title"] = "categoria_view";
 }
@@ -6,10 +7,11 @@
 <h1 style="text-align: center;">Categorías de vehículos</h1>
 
 
-@foreach (var item in Model)
-{
 
-    <div class="card" style="width: 20rem; ">
+
+@foreach (var item in Model.ListaCategorias)
+{
+    <div class="card" style="width: 18rem; ">
         <div style="text-align: center;">
             <h5 class="card-title">@item.tipo_vehiculo</h5>
         </div>
@@ -18,13 +20,111 @@
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
 
-            <p class="card-text" style="font-size: 5px;">*Su reserva garantiza uno de los modelos de autos a continuación,
+            <p class="card-text" style="font-size: 5px;">*Su reserva garantiza uno de los modelos de autos a
+                continuación,
                 sujeto a disponibilidad de la agencia.</p>
-
 
             <div style="text-align: center">
                 <h4>Costo : @item.costo</h4>
-                <a href="#" class="btn btn-primary">Seleccionar Categoria</a>
+
+
+
+
+                <!--campo oculto para enviarlo-->
+                <!-- Button para abrir el modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal-@(item.tipo_vehiculo.Replace(" ", "_"))">
+                    Seleccionar Categoria
+                </button>
+
+                <!-- Modal con identificador único basado en el tipo de vehículo -->
+                <div class="modal fade" id="exampleModal-@(item.tipo_vehiculo.Replace(" ", "_"))" tabindex="-1"
+                    aria-labelledby="exampleModalLabel-@(item.tipo_vehiculo.Replace(" ", "_"))" aria-hidden="true">
+                    <div class="modal-dialog">
+
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Resumen de la Reserva</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <!---------->
+                                <table class="table table-borderless">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col"></th>
+                                            <th scope="col"></th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                Lugar de Retiro:
+                                                <br>
+                                                Fecha: @Model._Pet_Reserva.fecha_ini
+                                                <br>
+                                                Hora: @Model._Pet_Reserva.hora_ini
+                                            </td>
+                                            <td>
+                                                <form name="editar" asp-action="" method="GET">
+                                                    <button type="submit" class="btn btn-primary btn-user btn-block"
+                                                        style="background-color: green; margin-left:15px">
+                                                        Editar
+                                                    </button>
+                                                </form>
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>
+
+
+                                                Lugar de Devolucion:
+                                                <br>
+                                                Fecha: @Model._Pet_Reserva.fecha_fin
+                                                <br>
+                                                Hora: @Model._Pet_Reserva.hora_fin
+                                            </td>
+                                            <td>
+                                                <form name="editar" asp-action="" method="GET">
+                                                    <button type="submit" class="btn btn-primary btn-user btn-block"
+                                                        style="background-color: green; margin-left:15px">
+                                                        Editar
+                                                    </button>
+                                                </form>
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>Categoria: @item.tipo_vehiculo
+
+                                            </td>
+                                            <td>
+                                                <form name="editar" asp-action="" method="GET">
+                                                    <button type="submit" class="btn btn-primary btn-user btn-block"
+                                                        style="background-color: green; margin-left:15px">
+                                                        Editar
+                                                    </button>
+                                                </form>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <!---------->
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                <form asp-action="categoria_view" asp-controller="Categoria" method="post">
+
+                                    <button type="submit" class="btn btn-primary">Reservar</button>
+                                    <input type="hidden" name="id_cate" id="id_cate" value="@item.id_categoria">
+                                </form>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
