--- a/Reserva_Vehiculos/Views/User/Login.cshtml
+++ b/Reserva_Vehiculos/Views/User/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <body style="background-color: #E8F3FC;">
-
+  
   <div class="card bg-light mt-lg-5 mx-auto text-center" style="max-width: 500px; height: 500px;">
     <h1>Login</h1>
     <main class="form-signin" style="max-width: 400px; margin: 0 auto;">
@@ -15,23 +15,25 @@
 
       <form asp-action="Login" asp-controller="User" method="post">
         <div class="form-floating mb-3">
-          <input asp-for="usuario" type="text" class="form-control" id="floatingInput" placeholder="Usuario" autocomplete="off" required>
+          <input asp-for="usuario" type="text" class="form-control" id="floatingInput" placeholder="Usuario"
+            autocomplete="off" required>
           <label for="floatingInput">Usuario</label>
         </div>
 
         <div class="form-floating mb-3">
-          <input asp-for="contrasenia" type="password" class="form-control" id="floatingPassword"
-            placeholder="Password" required>
+          <input asp-for="contrasenia" type="password" class="form-control" id="floatingPassword" placeholder="Password"
+            required>
           <label for="floatingPassword">Password</label>
         </div>
 
         <div class="mb-3">
-          <a  class="d-block">Mostrar datos</a>
           <a asp-action="DatosPersonales" asp-controller="DatosPersonales" class="d-block">Registrarse</a>
         </div>
 
         <button class="w-80 btn btn-lg btn-primary" type="submit">Ingresar</button>
-
+        
+          @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        
       </form>
     </main>
   </div>
