Se Inserta la Peticion reserva falta agregar la ubicacion

--- a/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
+++ b/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
@@ -1,4 +1,4 @@
-@model Obj_ViewModel
+@model Obj_ViewModel 
 
 @{
     ViewData["Title"] = "categoria_view";
@@ -6,8 +6,7 @@
 
 <h1 style="text-align: center;">Categorías de vehículos</h1>
 
-
-
+@* --------------------------------------------- paso  3 ------------------------------------------------------*@
 
 @foreach (var item in Model.ListaCategorias)
 {
@@ -103,10 +102,10 @@
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                                 <form asp-action="Datos_Reserva" asp-controller="Peticion" method="post">
 
-                                    <input type="hidden" name="fecha_ini" id="fecha_ini" value="@Model._Pet_Reserva.fecha_ini">
-                                    <input type="hidden" name="hora_ini" id="hora_ini" value="@Model._Pet_Reserva.hora_ini">
-                                    <input type="hidden" name="hora_ini" id="hora_ini" value="@Model._Pet_Reserva.fecha_fin">
-                                    <input type="hidden" name="hora_ini" id="hora_ini" value="@Model._Pet_Reserva.hora_fin">
+                                    <input type="text" name="fecha_ini" id="fecha_ini" value="@Model._Pet_Reserva.fecha_ini">
+                                    <input type="text" name="hora_ini" id="hora_ini" value="@Model._Pet_Reserva.hora_ini">
+                                    <input type="text" name="fecha_fin" id="fecha_fin" value="@Model._Pet_Reserva.fecha_fin">
+                                    <input type="text" name="hora_fin" id="hora_fin" value="@Model._Pet_Reserva.hora_fin">
 
 
                                     
