--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -33,7 +33,7 @@
         <input type="date" name="fechafin" id="fechafin">
 
         <label for="hora">Hora:</label>
-        <input aname="hora_fin" id="hora_fin" type="time">
+        <input name="hora_fin" id="hora_fin" type="time">
     </fieldset>
 </form>
 
