--- a/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
+++ b/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor _httpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -33,12 +34,16 @@
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <form class="form-inline my-2 my-lg-0">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                
+                                    @if (@_httpContextAccessor.HttpContext.Session.GetString("name_user") != null)
+                                    {
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-                                    <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
-                                </a>
-                                <ul class="dropdown-menu">
+                                        <span
+                                            class="mr-2 d-none d-lg-inline text-gray-600 small">Bienvenido @_httpContextAccessor.HttpContext.Session.GetString("name_user")</span>
+
+                                        <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+                                        <ul class="dropdown-menu">
                                     <li> <a class="dropdown-item" href="#">
                                             <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                             Profile
@@ -50,12 +55,17 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
+
                                     <li> <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal"
                                             asp-action="Logout" asp-controller="User">
                                             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                             Logout
                                         </a>
                                 </ul>
+                                 </a>
+                                    }
+                               
+                                
                             </form>
                         </li>
                     </ul>
