--- a/Reserva_Vehiculos/Views/_ViewImports.cshtml
+++ b/Reserva_Vehiculos/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Reserva_Vehiculos
 @using Reserva_Vehiculos.Models
+@using Microsoft.AspNetCore.Http;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
